refactor : Api 에러 코드 수정